# News-Article-Headline-Generator

./: .gitignore  README.md  TODO.md  app.py  finetune.ipynb  pyproject.toml
Tuning-in-colab/headline-lora-adapter/: adapter_model.safetensors
apps/: cli.py  groq_client.py  local_model_client.py  pipeline.py  schemas.py  scraper.py  validators.py
tests/: test_tuned_backend.py
