[project]
name = "news-headline-generator"
version = "0.1.0"
description = "Generates validated, style-aware headlines from news article text."
requires-python = ">=3.11"
dependencies = [
    "groq>=0.11.0",
    "peft>=0.19.1",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.1",
    "streamlit>=1.38.0",
    "torch>=2.13.0",
    "torchvision>=0.28.0",
    "trafilatura>=2.1.0",
    "transformers>=5.14.1",
]

[tool.uv]
   package = false
